# lexical-analyzer

./: .gitignore  CMakeLists.txt  README.md  main.c  scanner.c  scanner.h  test.c  tools.c  tools.h
